tests/testfile17.lox
// test get undefined variable

var breakfast = "beignets";
var beverage = "cafe au lait";
breakfast = "beignets with " + beverage;
print breakfastUndefined; // error